main.py - google login (logged_in, login_url, loggout_url), email, user.email() guestbook - if user, show msg box, else show not logged in

--- a/templates/guestbook.html
+++ b/templates/guestbook.html
@@ -11,6 +11,7 @@
 
     </center>
 
+    {% if user %}
     <form method="post" class="red">
 
         <p><b>Here you can leave a message for the Guestbook!</b></p>
@@ -26,7 +27,9 @@
         <button type="submit">Submit</button>
 
     </form>
-
+    {% else %}
+    <p>Please login if you'd like to post a message.</p>
+    {% endif %}
 
     <hr>
 
