main.py - added if not admin, show "you not admin" guestbook.html - take email from user.email()

--- a/templates/guestbook.html
+++ b/templates/guestbook.html
@@ -18,7 +18,7 @@
 
         <b>Name:</b><input type="text" name="name">
 
-        <b>Your email:</b><input type="email" name="email" required><br>
+        <p><b>Your email:</b> {{ user.email() }}</p>
 
         <b>Message:</b><br>
 
