--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-    <a href="/">Main page</a> | <a href="/guestbook">Guestbook</a> | <a href="/deleted">Deleted messages</a>
+    <a href="/">Main page</a> | <a href="/guestbook">Guestbook</a> | <a href="/deleted_messages">Deleted messages</a>
     {% if user %}
     | <strong>{{ user.email() }}</strong>
     | <a href="{{ logout_url }}">Logout</a>
